--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
+										<h2>松的博客</h2>
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
